basic timeline structure. need to add navigation, update data, fix spacing issues, and make rest of the site responsive

--- a/src/style/abstracts/_variables.sass
+++ b/src/style/abstracts/_variables.sass
@@ -60,7 +60,7 @@ $max-width: 92.5% !default
 
 /// Default border style
 /// @type List
-$border: $light-gray size(3) solid !default
+$border: size(2) solid $light-gray
 
 /// Extra small device breakpoint
 /// @type Number
