--- a/src/style/components/organisms/_header.sass
+++ b/src/style/components/organisms/_header.sass
@@ -11,9 +11,10 @@ $header-width: 100vw
 
 // Styles
 
-// Set width 100vw and height (190 / 16)rem
+// Make header full width
 // Add space on the top and bottom of header
 .ado-header
   +size($header-width, $header-height)
 
-  padding: $header-padding
+  > .ada-container
+    padding: $header-padding
