--- a/src/style/components/templates/_event.sass
+++ b/src/style/components/templates/_event.sass
@@ -15,6 +15,7 @@ $event-text-margin: 0 0 size(7.5) 0
 
   background-color: $white
   margin: size(60) 0
+  z-index: 5
 
   &.feature
     background-color: $dark
@@ -49,7 +50,7 @@ $event-text-margin: 0 0 size(7.5) 0
 .event-connector
   +size(size(122), size(1))
 
-  border-top: size(3) solid $light-gray
+  border-top: $border
 
 .event-content
   +size(size(536), auto)
